--- a/src/pages/reset-password/reset-password.html
+++ b/src/pages/reset-password/reset-password.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding scroll="false">
   <form [formGroup]="resetPasswordForm" (submit)="resetPassword()" novalidate>
 
     <ion-item>
