--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding scroll="false">
   <form [formGroup]="signupForm" (submit)="signupUser()" novalidate>
 
     <ion-item>
