--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -103,7 +103,7 @@
 
 
 
-<ion-footer style="text-align: center;">
+<ion-footer style="text-align: center; background-color: white">
 <!-- align to the bottom of the page -->
 <!-- <div style="position: absolute; bottom: 0px; width: 100%; z-index:10; background-color: white"> -->
   <div class="greyBar">
