--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -37,11 +37,11 @@
 
   </form>
 
-  <button ion-button block clear (click)="goToResetPassword()">
-    I forgot my password :-(
+  <button ion-button block clear style="margin-top : 0" (click)="goToResetPassword()">
+    I forgot my password
   </button>
 
-  <button ion-button block clear (click)="createAccount()">
+  <button ion-button block style="background-color : #afabab; margin : 50px 0" (click)="createAccount()">
     Create a new account
   </button>
 
