Commit 4 - Test bout-en-bout

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,9 +42,9 @@
   </div>
   </ion-list-header>
 
-  <img-loader src="assets/images/background/background75.png" style="display:none" useImg></img-loader>
+  <!-- <img-loader src="assets/images/background/background75.png" style="display:none" useImg></img-loader>
   <img-loader src="assets/images/background/background30.png" style="display:none" useImg></img-loader>
-  <img-loader src="assets/images/background/background15.png" style="display:none" useImg></img-loader>
+  <img-loader src="assets/images/background/background15.png" style="display:none" useImg></img-loader> -->
 
 </ion-header>
 
@@ -103,7 +103,7 @@
 
 
 
-<ion-footer style="text-align: center; background-color: white">
+<ion-footer style="text-align: center;">
 <!-- align to the bottom of the page -->
 <!-- <div style="position: absolute; bottom: 0px; width: 100%; z-index:10; background-color: white"> -->
   <div class="greyBar">
