--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -58,7 +58,7 @@
 </ion-content>
 
 
-<ion-footer style="text-align: center; background-color: white">
+<ion-footer style="text-align: center;">
 <!-- align to the bottom of the page -->
 <!-- <div style="position: absolute; bottom: 0px; width: 100%; z-index:10; background-color: white"> -->
   <div class="greyBar">
