--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -28,7 +28,7 @@
 
     <ion-col col-2 class="ion-col2">
       <img-loader
-        fallback="assets/images/coins/Coin.png"
+        fallback="assets/images/default_images/defaultCoin.png"
         [ngStyle]="{
           'position':'absolute',
           'top':'50%',
@@ -43,6 +43,90 @@
        ></img-loader>
     </ion-col>
 
+  </ion-row>
+
+
+
+
+
+
+
+  <div style="
+      background-color: white;
+      position: relative;
+      height: 130px;
+      overflow: auto;
+      overflow-y:hidden;
+      overflow-x:hidden;">
+      <img-loader
+        fallback="assets/images/default_images/defaultLandscape.png"
+        src="{{ landscape }}"
+        style="position: relative; height: 130px !important; max-height: 130px; overflow: auto !important;" useImg>
+      </img-loader>
+      <div style="
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 130px;
+        clear: both;
+        background-color: rgba(255, 255, 255, 0.75);
+        color: #ffffff;">
+
+        <ion-row>
+        <ion-col col-3>
+        </ion-col>
+        <ion-col col-6>
+          <ion-row style="height: 80px">
+            <img-loader
+              fallback="assets/images/default_images/defaultBrandIcon.png"
+              style="
+              border-radius: 40px;
+              position: absolute;
+              height: 80px;
+              width: 80px;
+              left: 50%;
+              margin-left: -40px;
+              border:2px solid #afabab;"
+              src="{{ brandIcon }}" useImg>
+            </img-loader>
+          </ion-row>
+          <ion-row style="margin-top: 5px;">
+            <ion-col style="text-align: center; margin: 0 0; padding: 0 0;">
+              <p style="
+                color: grey;
+                font-size: 130%;
+                margin: 0 0;">
+                {{ companyName }}</p>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+        <ion-col col-3>
+        </ion-col>
+
+      </ion-row>
+      </div>
+  </div>
+
+  <ion-row style="height: 35px">
+    <ion-col col-6 style="background-color: white; text-align: center; padding: 0 0;">
+      <button style="
+        height: 100%;
+        width: 100%;
+        color: grey;
+        font-size: 120%;">
+        Offers
+      </button>
+    </ion-col>
+    <ion-col col-6 style="background-color: white;">
+      <button style="
+        height: 100%;
+        width: 100%;
+        color: grey;
+        font-size: 120%;">
+        My rewards
+      </button>
+    </ion-col>
   </ion-row>
 
 </ion-header>
