--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -220,7 +220,7 @@
         </h1>
       </ion-card-content>
 
-      <ngx-qrcode style="margin: 0 0; padding: 0 0;" [qrc-value]="ctx.c[info][address]"></ngx-qrcode>
+      <ngx-qrcode style="margin: 0 0; padding: 0 0;" [qrc-value]="address"></ngx-qrcode>
 
       <ion-card-content style="margin: 0 0; padding: 0 0;">
         <p text-center style="margin: 0 0; padding: 0 0; font-size:9px; color: black">{{ ctx.c[info][address] }}</p>
