--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -73,7 +73,7 @@
 
           <ion-col>
             <div class="small-span">
-              <h2 class="text" text-center>
+              <h2 class="text" text-center style="color: grey;">
                 {{this.ctx.getCoinName(cc)}}
                 <!-- {{this.ctx.c[names][cc]}} -->
               </h2>
@@ -82,7 +82,7 @@
 
           <ion-col class="ion-col3">
             <div class="small-span">
-              <h2 class="text" text-center>
+              <h2 class="text" text-center style="color: grey;">
                 {{this.ctx.getCoinAmount(cc)}}
               </h2>
             </div>
