--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -12,7 +12,7 @@
 
     <ion-col col-8 class="ion-col2">
       <div class="small-span">
-        <h4 text-right *ngIf="coinName">
+        <h4 text-right *ngIf="coinName" style="color: grey;">
           Your {{coinName}}s:
         </h4>
       </div>
@@ -108,33 +108,50 @@
       </div>
   </div>
 
+
   <ion-row style="height: 35px">
     <ion-col col-6 style="background-color: white; text-align: center; padding: 0 0;">
-      <button style="
+      <button (click)="selectOffers()" style="
         height: 100%;
         width: 100%;
         color: grey;
         font-size: 120%;">
-        Offers
+        <div *ngIf="selectedTab==0" [ngStyle]="{'color': coinColor}">
+          Offers
+        </div>
+        <div *ngIf="selectedTab!=0" [ngStyle]="{'color': 'grey'}">
+          Offers
+        </div>
       </button>
+      <div *ngIf="selectedTab==0" [ngStyle]="{'background-color': coinColor}" style="width: 100%; height: 2px; botttom: 0;"></div>
     </ion-col>
-    <ion-col col-6 style="background-color: white;">
-      <button style="
+    <ion-col col-6 style="background-color: white; text-align: center; padding: 0 0;">
+      <button (click)="selectRewards()" style="
         height: 100%;
         width: 100%;
         color: grey;
         font-size: 120%;">
-        My rewards
+        <div *ngIf="selectedTab==1" [ngStyle]="{'color': coinColor}">
+          My rewards
+        </div>
+        <div *ngIf="selectedTab!=1" [ngStyle]="{'color': 'grey'}">
+          My rewards
+        </div>
       </button>
+      <div *ngIf="selectedTab==1" [ngStyle]="{'background-color': coinColor}" style="width: 100%; height: 2px; bottom: 0;"></div>
     </ion-col>
   </ion-row>
 
 </ion-header>
 
 
+
+
+
+
 <ion-content>
 
-  <ion-list>
+  <ion-list *ngIf="selectedTab==0">
 
     <ion-item-sliding *ngFor="let off of offers" style="padding: 0 0; background-color: rgba(255, 255, 255, 0.85);">
 
@@ -160,7 +177,7 @@
                   height: 40px;
                   margin-top: -20px;
                   margin-left: -20px;
-                  border:1px solid #ffffff;
+                  border:1px solid #afabab;
                 " useImg>
               </img-loader>
             </div>
@@ -204,10 +221,14 @@
               text-align: left;
             ">
 
-              <h4 class="text" text-center [ngStyle]="{'color': coinColor}" style="
+              <h4 *ngIf="ctx.c[ctx.amounts][coinContractAddress]>=off[offerPrice]" class="text" text-center [ngStyle]="{'color': coinColor}" style="
                 max-height: 40px;
-                margin: 5px 5px;
-              ">
+                margin: 5px 5px;">
+                Price : {{off[offerPrice]}}
+              </h4>
+              <h4 *ngIf="ctx.c[ctx.amounts][coinContractAddress]<off[offerPrice]" class="text" text-center [ngStyle]="{'color': 'grey'}" style="
+                max-height: 40px;
+                margin: 5px 5px;">
                 Price : {{off[offerPrice]}}
               </h4>
             </div>
