--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="no-scroll" scroll="false">
+<ion-content padding scroll="false">
   <form [formGroup]="loginForm" (submit)="loginUser()" novalidate>
 
     <ion-item>
