--- a/src/pages/reset-password/reset-password.html
+++ b/src/pages/reset-password/reset-password.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      Reset your Password
+      Reset Password
     </ion-title>
   </ion-navbar>
 </ion-header>
