--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -7,20 +7,22 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-buttons start>
+    <!-- <ion-buttons start>
+      <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
+    </ion-buttons> -->
+    <ion-title>Map</ion-title>
+    <ion-buttons end>
       <button ion-button (click)="goBack()">
         Back
       </button>
-    </ion-buttons>
-    <ion-title>Map</ion-title>
-    <ion-buttons end>
-      <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
     </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <div #map id="map"></div>
+<ion-content>
+  <div #map id="map" style="width: 100%; height: 100%; background-color: transparent">
+  </div>
+  <!-- <button style="background-color: black; heigth: 30px; width: 30px; bottom: 20px; right: 20px" (click)="goBack()"></button> -->
 </ion-content>
