--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -151,6 +151,8 @@
 
 <ion-content>
 
+  <!-- -------------------------------------------- OFFERS -------------------------------------------- -->
+
   <ion-list *ngIf="selectedTab==0">
 
     <ion-item-sliding *ngFor="let off of offers" style="padding: 0 0; background-color: rgba(255, 255, 255, 0.85);">
@@ -240,11 +242,15 @@
     </ion-item-sliding>
   </ion-list>
 
+
+
+  <!-- -------------------------------------------- REWARDS -------------------------------------------- -->
+
   <ion-list *ngIf="selectedTab==1">
 
     <ion-item-sliding *ngFor="let off of rewards" style="padding: 0 0; background-color: rgba(255, 255, 255, 0.85);">
 
-      <button ion-item style="padding: 0 0; margin: 0 0; background-color: transparent" (click)="offerTapped($event, off)">
+      <button ion-item style="padding: 0 0; margin: 0 0; background-color: transparent" (click)="rewardTapped($event, off)">
         <ion-row style="margin: 0 0; padding: 0 0;">
 
           <ion-col col-2 style="
@@ -310,15 +316,10 @@
               text-align: left;
             ">
 
-              <h4 *ngIf="ctx.c[ctx.amounts][coinContractAddress]>=off[offerPrice]" class="text" text-center [ngStyle]="{'color': coinColor}" style="
+              <h4 class="text" text-center [ngStyle]="{'color': coinColor}" style="
                 max-height: 40px;
                 margin: 5px 5px;">
-                Price : {{off[offerPrice]}}
-              </h4>
-              <h4 *ngIf="ctx.c[ctx.amounts][coinContractAddress]<off[offerPrice]" class="text" text-center [ngStyle]="{'color': 'grey'}" style="
-                max-height: 40px;
-                margin: 5px 5px;">
-                Price : {{off[offerPrice]}}
+                Use now
               </h4>
             </div>
           </ion-col>
