--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script src="http://maps.google.com/maps/api/js?key=AIzaSyBy76m--pfmQ8Jca_zWa5oxyt6zUcYsMDI"></script>
   <script src="cordova.js"></script>
 
-  <script src="node_modules/angular-barcode/dist/angular-barcode.js"></script>
+  <!-- <script src="node_modules/angular-barcode/dist/angular-barcode.js"></script> -->
 
   <link href="build/main.css" rel="stylesheet">
 
