--- a/src/pages/reward/reward.html
+++ b/src/pages/reward/reward.html
@@ -102,14 +102,17 @@
 
   </ion-row>
 
-  <ion-row [ngStyle]="{'position':'relative', 'margin':'0 0'}">
-    <button ion-button (click)="goBack()" [ngStyle]="{
-      'background-color': coinColor,
-      'position':'absolute',
-      'left':'50%',
-      'width':'15em',
-      'margin-left':'-7.5em'
-    }">
+  <ion-row [ngStyle]="{'position':'relative', 'margin-top':'60px'}">
+    <button ion-button (click)="goBack()" [ngStyle]="{'background-color': coinColor}"
+    style="
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      height: 40px;
+      width: 70%;
+      margin-top: -20px;
+      margin-left: -35%;
+      ">
       Ok
     </button>
   </ion-row>
