--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
       </button>
     </ion-buttons>
     <ion-title>
-      Coin Wallet
+      FID Wallet
     </ion-title>
     <ion-buttons end>
       <button ion-button icon-only padding (click)="showMap()">
@@ -49,7 +49,7 @@
             text-overflow: ellipsis;
             white-space: normal;
             ">
-            COINNAME
+            FIDNAME
           </h2>
         </div>
       </ion-col>
@@ -213,7 +213,7 @@
         color: #fe9400;
         font-size: 14px;
         ">
-        Find coins around you by clicking here.
+        Find FIDs around you by clicking here.
       </h2>
     </div>
   </ion-row>
@@ -227,7 +227,7 @@
 <!-- align to the bottom of the page -->
 <!-- <div style="position: absolute; bottom: 0px; width: 100%; z-index:10; background-color: white"> -->
   <div class="greyBar">
-    <p style="margin: 0 0; padding: 3px 0; color: white">Collect coins in a shop</p>
+    <p style="margin: 0 0; padding: 3px 0; color: white">Collect FIDs in a shop</p>
   </div>
 
   <button (click)="collectCoins()" style="background-color: white">
