--- a/src/pages/receive-coins/receive-coins.html
+++ b/src/pages/receive-coins/receive-coins.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar [ngStyle]="{'background-color': coinColor}">
-    <ion-title>Receive Coins</ion-title>
+    <ion-title>Receive FIDs</ion-title>
 
     <ion-buttons end>
       <button ion-button (click)="goBack()">
@@ -19,7 +19,7 @@
 
   <div [ngStyle]="{'background-color': 'rgba(255, 255, 255, 0.5)'}">
     <p text-center style="padding: 5px 0; margin: 0 0; color: grey;">
-      Let the sender scan your ID to receive coins.
+      Let the sender scan your ID to receive FIDs.
     </p>
   </div>
 
