--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,8 @@
       </button>
     </ion-buttons>
     <ion-title>
-      FID Wallet
+      <!-- {{ 'HOME.home_title' | translate }} -->
+      FID wallet
     </ion-title>
     <ion-buttons end>
       <button ion-button icon-only padding (click)="showMap()">
