--- a/src/pages/receive-coins/receive-coins.html
+++ b/src/pages/receive-coins/receive-coins.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar [ngStyle]="{'background-color': coinColor}">
-    <ion-title>Receive FIDs</ion-title>
+    <ion-title>{{ 'RECEIVE' | translate }}</ion-title>
 
     <ion-buttons end>
       <button ion-button (click)="goBack()">
